--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+    
     padding: 5px;
     margin-bottom: 17px;
     background: #f5e6e1;
@@ -10,6 +11,7 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
+    position: relative;
 }
 
 .header__logo {
@@ -36,6 +38,50 @@
 }
 
 
-.header__logo_img{
-    width: 30px;
+.header__logo_link{
+    font-weight: 700;
+    font-size: 24px;
+    color: hsl(20, 95%, 8%);
+    text-shadow: 1px 1px 4px rgb(204, 148, 102);
+}
+
+.shop-cart-button{
+    cursor: pointer;
+    transition: color, transform 500ms ease;
+    width: 50px;
+    
+}
+
+.shop-cart-button:hover,
+.shop-cart-button.active{
+    color: #f78080;
+    transform: scale(1.5);
+}
+
+.shop-cart{
+    position: absolute;
+    padding: 10px;
+    padding-bottom: 0;
+    z-index: 100;
+    top: 120px;
+    right: 20px;
+    width: 450px;
+    min-height: 100px;
+    background: #f0eeee;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 5px 18px 5px rgba(161,161,161,0.98); 
+    box-shadow: 0px 5px 18px 5px rgba(161,161,161,0.98);
+}
+
+.empty{
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.summa{
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
 }
