--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,7 @@
 .header {
-    
     padding: 5px;
-    margin-bottom: 17px;
-    background: #f5e6e1;
+    background: rgb(249,248,228);
+background: linear-gradient(90deg, rgba(249,248,228,1) 0%, rgb(201, 200, 198) 35%, rgba(249,236,227,1) 100%);
 }
 
 .header__container {
@@ -42,7 +41,7 @@
     font-weight: 700;
     font-size: 24px;
     color: hsl(20, 95%, 8%);
-    text-shadow: 1px 1px 4px rgb(204, 148, 102);
+    text-shadow: 1px 1px 4px rgb(223, 210, 199);
 }
 
 .shop-cart-button{
@@ -65,7 +64,7 @@
     z-index: 100;
     top: 120px;
     right: 20px;
-    width: 450px;
+    width: 500px;
     min-height: 100px;
     background: #f0eeee;
     border-radius: 10px;
