--- a/src/components/common/Product/Product.css
+++ b/src/components/common/Product/Product.css
@@ -6,13 +6,16 @@
     justify-content: space-between;
     gap: 5px;
     padding: 10px 5px;
-    background-color: #f5f5f5;
+    background-color: #f1eeee;
     border-radius: 10px 10px 0 0;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     cursor: pointer;
+    transition: transform 300ms ease;
 }
 .what-can-you__item:hover {
-    opacity: 0.6;
+    
+    background-color: #d3d1d1;
+    transform: scale(1.1);
     background: #E2E2EA;
 }
 .what-can-you__item a{
